nav bar does log in or log out

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
-    /> -->
+    />
     <!-- <script src="src/App.js"></script>
     <script src="src/CreateAccount.js"></script>
     <script src="src/EditRenterForm.js"></script>
@@ -15,6 +15,29 @@
     <script src="PropertyCard.js"></script>
     <script src="PropertyContainer.js"></script>
     <script src="PropertyInfo.js"></script> -->
+    <!-- these are for material UI -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    /> -->
+
+    <script src="https://unpkg.com/react/umd/react.production.js" crossorigin />
+
+<script
+  src="https://unpkg.com/react-dom/umd/react-dom.production.js"
+  crossorigin
+/>
+
+<script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin
+/>
+
+<script>var Alert = ReactBootstrap.Alert;</script>
   </head>
   <body>
     <div id="root"></div>
