agent info icon up

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <!-- <script src="src/App.js"></script>
     <script src="src/CreateAccount.js"></script>
     <script src="src/EditRenterForm.js"></script>
